--- a/Hobbies.html
+++ b/Hobbies.html
@@ -11,12 +11,12 @@
 
 
 
-<title>index.knit</title>
+<title>Interests and Hobbies</title>
 
 <script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/sandstone.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -63,7 +63,6 @@ if (window.hljs) {
 
 
 
-<link rel="stylesheet" href="custom.css" type="text/css" />
 
 
 
@@ -369,48 +368,49 @@ div.tocify {
 
 
 
+<h1 class="title toc-ignore">Interests and Hobbies</h1>
 
 </div>
 
 
-<div id="stay-curious-stay-compassionate" class="section level2">
-<h2>Stay Curious, Stay Compassionate</h2>
-<p>Hello! I’m Zimo (Zina) Ma, a graduate student at the University of
-Chicago, where I am pursuing a Master of Arts in Computational Social
-Science, expected to graduate in June 2025. My academic and professional
-journey is a blend of technical rigor with social consciousness, aiming
-to leverage data science to decode complex human behaviors and drive
-equitable solutions.</p>
-<div id="education-backgrounds" class="section level3">
-<h3>Education Backgrounds</h3>
-<p>I graduated from DePauw University with a Bachelor of Arts, majoring
-in both Mathematics and Psychology. This interdisciplinary education
-enables me to integrate quantitative modeling with deep behavioral
-insights, providing a robust foundation for tackling complex challenges.
-Currently, as a graduate student at the University of Chicago, I am
-pursuing a Master of Arts in Computational Social Science, expected to
-graduate in June 2025.</p>
+<div id="interests-and-hobbies" class="section level2">
+<h2>Interests and Hobbies</h2>
+<p>From a young age, I have been deeply engaged in the arts,
+particularly through studying Chinese folk dances and playing piano.
+This early passion for dance not only connected me with my cultural
+heritage but also cultivated a deep appreciation for expressive movement
+and storytelling through art.</p>
+<p>Upon entering undergraduate studies at DePauw University, I continued
+to pursue my passion for dance by joining the X-CELL Dance Team for four
+years and eventually taking on the role of Vice President,
+Choreographer, and Parliamentarian. My responsibilities included
+recording and creating memorial videos to preserve our team’s rich
+history, choreographing performances that blended diverse cultural
+influences such as Majorette-style dances, Afrobeats, and traditional
+Chinese movements, and leading the team in organizing major events like
+our annual showcase and Mock Shaadi performance. I also monitored the
+progress of each executive member’s individual projects, ensuring
+alignment with our collective goals.</p>
+<p>X-CELL became my safe zone and family, where our bonds grew
+incredibly strong. We spent almost every day together, whether dancing,
+studying, or just hanging out. Especially during my senior year, as we
+faced the grueling demands of “Hell Week” for our showcase rehearsals,
+finals, and my thesis, we often pulled all-nighters in the study rooms,
+tirelessly working on our assignments and even sleeping there. This
+intense, shared commitment not only deepened our friendships but also
+instilled a profound sense of resilience and teamwork.</p>
+<div class="float">
+<img src="Images/X-CELL.jpg" title="X-CELL.jpg" alt="X-CELL" />
+<div class="figcaption">X-CELL</div>
 </div>
-<div id="future-goals" class="section level3">
-<h3>Future Goals</h3>
-<p>Looking ahead, I aim to further my expertise in machine learning and
-data visualization, with the goal of contributing to innovative
-solutions in social science and policy-making. I am particularly
-interested in the intersection of technology and social impact, aspiring
-to create tools and models that promote equity and understanding across
-diverse communities.</p>
-</div>
-<div id="connect-with-me" class="section level3">
-<h3>Connect With Me</h3>
-<p>I am always eager to connect with fellow data enthusiasts and
-professionals. You can reach me at <a
-href="mailto:zimoma0819@uchicago.edu">my email</a> or connect with me on
-<a href="https://www.linkedin.com/in/zimo-ma-95a62b220/">LinkedIn</a>.
-Let’s collaborate and make a positive impact together!</p>
-<p>Thank you for visiting my site and getting to know more about my
-professional journey and personal interests. I look forward to the
-opportunities and challenges that lie ahead!</p>
-</div>
+<p>These experiences have been some of the most joyful and precious
+moments of my life, fostering a deep bond that has become a treasured
+source of strength and happiness. Through dance, I promoted
+intercultural dialogue and fostered a sense of community among students
+from diverse backgrounds. My journey through dance has not only been a
+source of personal fulfillment but has significantly enhanced my
+leadership and organizational skills, contributing to both my personal
+and professional development.</p>
 </div>
 
 
