--- a/ReEx.html
+++ b/ReEx.html
@@ -11,12 +11,12 @@
 
 
 
-<title>index.knit</title>
+<title>Research Experience</title>
 
 <script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/sandstone.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -63,7 +63,6 @@ if (window.hljs) {
 
 
 
-<link rel="stylesheet" href="custom.css" type="text/css" />
 
 
 
@@ -330,16 +329,7 @@ div.tocify {
         
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li>
-  <a href="index.html">Home</a>
-</li>
-<li>
-  <a href="ReEx.html">Research Experience</a>
-</li>
-<li>
-  <a href="Hobbies.html">Interests and Hobbies</a>
-</li>
-<li class="dropdown">
+        <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
     Projects
      
@@ -347,12 +337,18 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="plotly.html">MA Thesis:</a>
+      <a href="plotly.html">MA Thesis</a>
     </li>
     <li>
       <a href="https://zimoma.shinyapps.io/Inno80text/">Innovation 80: text analyses of surveys</a>
     </li>
   </ul>
+</li>
+<li>
+  <a href="about.html">About</a>
+</li>
+<li>
+  <a href="hats.html">hats</a>
 </li>
 <li>
   <a href="http://github.com/zimoma0819">
@@ -369,48 +365,43 @@ div.tocify {
 
 
 
+<h1 class="title toc-ignore">Research Experience</h1>
 
 </div>
 
 
-<div id="stay-curious-stay-compassionate" class="section level2">
-<h2>Stay Curious, Stay Compassionate</h2>
-<p>Hello! I’m Zimo (Zina) Ma, a graduate student at the University of
-Chicago, where I am pursuing a Master of Arts in Computational Social
-Science, expected to graduate in June 2025. My academic and professional
-journey is a blend of technical rigor with social consciousness, aiming
-to leverage data science to decode complex human behaviors and drive
-equitable solutions.</p>
-<div id="education-backgrounds" class="section level3">
-<h3>Education Backgrounds</h3>
-<p>I graduated from DePauw University with a Bachelor of Arts, majoring
-in both Mathematics and Psychology. This interdisciplinary education
-enables me to integrate quantitative modeling with deep behavioral
-insights, providing a robust foundation for tackling complex challenges.
-Currently, as a graduate student at the University of Chicago, I am
-pursuing a Master of Arts in Computational Social Science, expected to
-graduate in June 2025.</p>
-</div>
-<div id="future-goals" class="section level3">
-<h3>Future Goals</h3>
-<p>Looking ahead, I aim to further my expertise in machine learning and
-data visualization, with the goal of contributing to innovative
-solutions in social science and policy-making. I am particularly
-interested in the intersection of technology and social impact, aspiring
-to create tools and models that promote equity and understanding across
-diverse communities.</p>
-</div>
-<div id="connect-with-me" class="section level3">
-<h3>Connect With Me</h3>
-<p>I am always eager to connect with fellow data enthusiasts and
-professionals. You can reach me at <a
-href="mailto:zimoma0819@uchicago.edu">my email</a> or connect with me on
-<a href="https://www.linkedin.com/in/zimo-ma-95a62b220/">LinkedIn</a>.
-Let’s collaborate and make a positive impact together!</p>
-<p>Thank you for visiting my site and getting to know more about my
-professional journey and personal interests. I look forward to the
-opportunities and challenges that lie ahead!</p>
-</div>
+<div id="reseach-experience" class="section level3">
+<h3>Reseach Experience</h3>
+<p>Throughout my academic career, I have engaged in various research
+projects that blend computational methods with social science to address
+pertinent issues. My current research (MA Thesis) explores visual
+stereotypes in the workplace, focusing on how perceived attributes based
+on face, such as attractiveness and trustworthiness, and gender
+stereotypes influence hiring decisions.</p>
+<p>My experience at DePauw University as a Research Analyst allowed me
+to delve into gender-related disparities, where I utilized GIS and
+statistical methods to explore the socioeconomic factors influencing the
+disproportional impact of natural disasters on Indian women. I also
+focused on examining the effects of the COVID-19 pandemic on STEM
+education. Through comprehensive data analysis using Chi-Square tests
+and independent t-tests, I assessed how different student demographics
+experienced changes in STEM learning environments during the
+pandemic.</p>
+<p>At the University of Chicago, my focus has shifted towards
+understanding visual stereotypes in the workplace. My ongoing thesis
+work investigates how perceptions of visual stereotypes—particularly
+facial attractiveness, gender, and 32 other attributes—affect job
+suitability assessments for client-facing versus back-office roles. This
+research aims to identify and analyze biases in hiring practices and
+develop data-driven strategies to mitigate these biases, promoting more
+equitable employment practices.</p>
+<p>Each of these research endeavors has not only sharpened my skills in
+data handling and analysis but also deepened my understanding of how
+data can profoundly influence public policy and human rights
+initiatives. This appreciation drives my ongoing commitment to apply
+rigorous data science methods to uncover and address systemic challenges
+within society.</p>
+<p>You may click <em>Project</em> to check my research.</p>
 </div>
 
 
