--- a/Proposal.html
+++ b/Proposal.html
@@ -537,19 +537,19 @@ we will further determine the specific amount.</p>
 participants need to evaluate faces for each job type, a client-facing
 job or a back-office job. Among common job roles identified on Indeed,
 we specifically selected the roles of “Financial Advisor” and “Retail
-Sales Associate” to represent back-office positions and “Risk Analyst”
-and “Inventory Manager” for customer-facing positions in Finance and
-Retail industries(Indeed, 2024). Participants will need to complete the
-evaluations of 166 stimuli images. 136 images will be randomly selected
-from the full set of 817 images, and 30 will be randomly selected from
-the 136 faces to measure interrater reliability. During each trial,
-participants will be presented with a job tile with job descriptioins,
-following with a manipulation test. Then, they will be presented one
-facial image and asked to assess its suitability for the assigned job
-title on the questions “To what extent do you think this person is
-suitable for a [Job Title]?” on a continuous slider scale of 0 (not at
-all) to 100 (very much so). Each facial image will be presented randomly
-one after another.</p>
+Sales Associate” to represent customer-facing positions and “Risk
+Analyst” and “Inventory Manager” for back-office positions in Finance
+and Retail industries (Indeed, 2024). Participants will need to complete
+the evaluations of 166 stimuli images. 136 images will be randomly
+selected from the full set of 817 images, and 30 will be randomly
+selected from the 136 faces to measure interrater reliability. During
+each trial, participants will be presented with a job tile with job
+descriptioins, following with a manipulation test. Then, they will be
+presented one facial image and asked to assess its suitability for the
+assigned job title on the questions “To what extent do you think this
+person is suitable for a [Job Title]?” on a continuous slider scale of 0
+(not at all) to 100 (very much so). Each facial image will be presented
+randomly one after another.</p>
 </div>
 <div id="analysis" class="section level3">
 <h3><strong>Analysis</strong></h3>
