--- a/Hobbies.html
+++ b/Hobbies.html
@@ -63,6 +63,7 @@ if (window.hljs) {
 
 
 
+<link rel="stylesheet" href="custom.css" type="text/css" />
 
 
 
@@ -340,14 +341,23 @@ div.tocify {
 </li>
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-    Projects
+    MA Thesis
      
     <span class="caret"></span>
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="plotly.html">MA Thesis:</a>
+      <a href="Proposal.html">Proposal</a>
     </li>
+  </ul>
+</li>
+<li class="dropdown">
+  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Projects
+     
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu">
     <li>
       <a href="https://zimoma.shinyapps.io/Inno80text/">Innovation 80: text analyses of surveys</a>
     </li>
@@ -373,6 +383,9 @@ div.tocify {
 </div>
 
 
+<head>
+<link rel="stylesheet" type="text/css" href="/custom.css">
+</head>
 <div id="interests-and-hobbies" class="section level2">
 <h2>Interests and Hobbies</h2>
 <p>From a young age, I have been deeply engaged in the arts,
@@ -400,8 +413,8 @@ tirelessly working on our assignments and even sleeping there. This
 intense, shared commitment not only deepened our friendships but also
 instilled a profound sense of resilience and teamwork.</p>
 <div class="float">
-<img src="Images/X-CELL.jpg" title="X-CELL.jpg" alt="X-CELL" />
-<div class="figcaption">X-CELL</div>
+<img src="Images/X-CELL.jpg" title="X-CELL.jpg" alt="X-CELL_Families" />
+<div class="figcaption">X-CELL_Families</div>
 </div>
 <p>These experiences have been some of the most joyful and precious
 moments of my life, fostering a deep bond that has become a treasured
