--- a/Proposal.html
+++ b/Proposal.html
@@ -350,6 +350,9 @@ div.tocify {
     <li>
       <a href="Proposal.html">Proposal</a>
     </li>
+    <li>
+      <a href="Thesis.html">Job Suitability Distributions</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
